--- a/templates/account/account_change.html
+++ b/templates/account/account_change.html
@@ -328,7 +328,12 @@
                         </div>
                     </div>
                 </div>
-                <button class="change_button_seller" type="submit">변경하기</button>
+                <div id="dialog-confirm2" title="정보수정 완료">
+                정보수정을 완료하였습니다.<br>
+                메인 페이지로 가시겠습니까?
+                </div>
+                <input type="hidden" id="go_main2" name="go_main" value="True"/>
+                <button class="change_button_seller" type="button">변경하기</button>
             </form>
         </div>
 
