change background when join (issue #106)

--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{% static 'css/auth.css' %}">
     <style type="text/css">
         .bg_container {
-            background-image: url("{% static 'img/02.png' %}");
+            background-image: url("{% static 'img/bg.png' %}");
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
@@ -31,7 +31,6 @@
 {% block content %}
 <div class="bg_container">
     <div class="auth-logo">
-        <img src="{% static 'img/logo2.png' %}">
     </div>
     <div class="auth-area">
         <div class="verification-email">
