--- a/templates/header.html
+++ b/templates/header.html
@@ -62,6 +62,11 @@
 <div class="header_navigation">
     <ul>
         <li>
+            <a href="{% url 'category' 'all' %}">
+                전체
+            </a>
+        </li>
+        <li>
             <a href="{% url 'category' 'blog' %}">
                 블로그
             </a>
