--- a/templates/category.html
+++ b/templates/category.html
@@ -18,9 +18,15 @@
                 if (type == '평점순') {
                     $('.product-rating').show();
                     $('.product-created').hide();
+                    $('.product-price').hide();
                 } else if (type == '최신순') {
                     $('.product-rating').hide();
                     $('.product-created').show();
+                    $('.product-price').hide();
+                } else if (type == '가격순') {
+                    $('.product-rating').hide();
+                    $('.product-created').hide();
+                    $('.product-price').show();
                 }
             });
 
@@ -172,9 +178,18 @@
                         <ul>
                             <li class="sort active" data-type="sort_1">평점순</li>
                             <li class="sort" data-type="sort_2">최신순</li>
+                            <li class="sort" data-type="sort_3">가격순</li>
                         </ul>
                     </div>
                 {% endif %}
+            </div>
+            <div id="range-wrapper">
+                <div id="slider-range"></div>
+                <span id="first_span_val"></span>
+                <span id="second_span_val"></span>
+            </div>
+            <div id="loading" style="display: none; position:absolute; left:50%; top:50%; z-index: 10;">
+                <img src="{% static 'img/ajax-loader_mid.gif' %}">
             </div>
             <div class="special-list">
                 {% if message %}
@@ -383,8 +398,88 @@
                             {% endif %}
                         {% endfor %}
                     </div>
+                    </div>
+                    <div class="product-price" style="display:none;">
+                        {% for product in products_price %}
+                            {% cycle '<div class="row">' '' '' '' %}
+                            <a href="{{ product.get_absolute_url }}"
+                               class="{% cycle 'list-card' 'list-card' 'list-card' 'list-card last' %}" data-id="{{ product.id }}">
+                                <div class="card-main-info" data-type="{{ product.sns_type }}" data-color="{{ product.sns_type_color }}">
+                                  <div class="card-type">
+                                    <img class="product-type-image" src="{{ product.sns_type_image_url }}" alt="{{ product.sns_type }}" />
+                                  </div>
+                                  <div class="card-title">
+                                        {{product.oneline_intro}}
+                                    </div>
+                                    <div class="circle-wrapper">
+                                        <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                        <ul class="circle" gauge-data="{{ product.socialup_gauge }}">
+                                            <li class="circle-list">
+                                                <div class="circle-text">1</div>
+                                            </li>
+                                            <li class="circle-list">
+                                                <div class="circle-text">2</div>
+                                            </li>
+                                            <li class="circle-list">
+                                                <div class="circle-text">3</div>
+                                            </li>
+                                            <li class="circle-list">
+                                                <div class="circle-text">4</div>
+                                            </li>
+                                            <li class="circle-list">
+                                                <div class="circle-text">5</div>
+                                            </li>
+                                            <div class="circle-mask2">
+                                                <div class="circle-mask2-text">
+                                                    <span style="font-size:24px;">50</span>
+                                                    <span style="font-size:15px;">원</span>
+                                                </div>
+                                            </div>
+                                        </ul>
+                                        <div class="cash">
+                                            <span class="cash-price" style="font-size:1.2em; color:grey;" data-price="{{ product.price }}">
+                                               {{ product.price }}원
+                                                {% if product.manuscript_price > 0 or product.highrank_price > 0 %}
+                                                    ~
+                                                {% endif %}
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card-info">
+                                    <div class="card-subtitle">
+                                        {% for sns in product.sns_set.all %}
+                                            {% for item in sns.analytics.all %}
+                                                {{ item }} {{ item.outcome|round_count }}
+                                            {% endfor %}
+                                        {% endfor %}
+                                    </div>
+                                    <div class="card-author">
+                                        <div class="card-author-info">
+                                            <img src="{{ product.seller.user.get_avatar }}" >
+                                            <span>{{ product.seller }}</span>
+                                        </div>
+                                        <div class="card-author-info-rating" data-rating="{{ product.rating }}">
+                                            <i class="fa fa-star" aria-hidden="true"></i>
+                                            <i class="fa fa-star" aria-hidden="true"></i>
+                                            <i class="fa fa-star" aria-hidden="true"></i>
+                                            <i class="fa fa-star" aria-hidden="true"></i>
+                                            <i class="fa fa-star" aria-hidden="true"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+
+                            {% if products|length == forloop.counter %}
+                                </div>
+                            {% else %}
+                                {% cycle '' '' '' '</div>' %}
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                    </div>
+
                 {% endif %}
-    </div>
     </div>
     </div>
     </div>
