caution font bold->500 (issue #105)

--- a/static/css/dashboard/guide.css
+++ b/static/css/dashboard/guide.css
@@ -110,7 +110,7 @@
 
 .caution-div-each{
     text-align:center;
-    font-weight:bold;
+    font-weight:500;
     color:#5a5a5a;
     font-size:10px;
 }
