--- a/static/css/product_detail.css
+++ b/static/css/product_detail.css
@@ -1136,7 +1136,7 @@ _:-ms-lang(x), .product-seller-name{
 
 .caution-div-each{
     text-align:center;
-    font-weight:bold;
+    font-weight:500;
     color:#5a5a5a;
 }
 
