make show-seller-detail button font-weight 500 in product_detail (issue #104)

--- a/static/css/product_detail.css
+++ b/static/css/product_detail.css
@@ -121,7 +121,9 @@ _:-ms-lang(x), .content .product-top .seller-info .seller-img img {
 }
 .content .product-top .seller-info .seller-right-info .show-seller-detail #btn-show-seller-detail {
     background: none;
-    padding:6px;
+    padding:8px;
+    font-size: 13px;
+    font-weight: 500;
 }
 
 .content .product-top .seller-info .seller-detail-info {
