replace seller ID col to buyer ID col in order_manage template

--- a/templates/seller/order_manage.html
+++ b/templates/seller/order_manage.html
@@ -73,7 +73,7 @@
                             <ul class="purchase-table-ul">
                                 <li class="table_product number">상품번호</li>
                                 <li class="table_product name">상품명</li>
-                                <li class="table_product seller_id">판매자ID</li>
+                                <li class="table_product seller_id">구매자ID</li>
                                 <li class="table_product when_purchase">구매날짜</li>
                                 <li class="table_product working_status">작업상태</li>
                                 <li class="table_product price">결제금액</li>
@@ -276,7 +276,7 @@
                             <ul class="purchase-table-ul">
                                 <li class="table_product number">상품번호</li>
                                 <li class="table_product name">상품명</li>
-                                <li class="table_product seller_id">판매자ID</li>
+                                <li class="table_product seller_id">구매자ID</li>
                                 <li class="table_product when_purchase">구매날짜</li>
                                 <li class="table_product price">결제금액</li>
                                 <li class="table_product working_status">상태변경</li>
@@ -486,7 +486,7 @@
                             <ul class="purchase-table-ul">
                                 <li class="table_product number">상품번호</li>
                                 <li class="table_product name">상품명</li>
-                                <li class="table_product seller_id">판매자ID</li>
+                                <li class="table_product seller_id">구매자ID</li>
                                 <li class="table_product when_purchase">구매날짜</li>
                                 <li class="table_product price">결제금액</li>
                                 <li class="table_product working_status">상태변경</li>
@@ -674,7 +674,7 @@
                             <ul class="purchase-table-ul">
                                 <li class="table_product number">상품번호</li>
                                 <li class="table_product name">상품명</li>
-                                <li class="table_product seller_id">판매자ID</li>
+                                <li class="table_product seller_id">구매자ID</li>
                                 <li class="table_product when_purchase">구매날짜</li>
                                 <li class="table_product price">결제금액</li>
                                 <li class="table_product working_status">상태변경</li>
@@ -813,7 +813,7 @@
                             <ul class="purchase-table-ul">
                                 <li class="table_product number">상품번호</li>
                                 <li class="table_product name">상품명</li>
-                                <li class="table_product seller_id">판매자ID</li>
+                                <li class="table_product seller_id">구매자ID</li>
                                 <li class="table_product when_purchase">구매날짜</li>
                                 <li class="table_product price">결제금액</li>
                                 <li class="table_product working_status">상태변경</li>
@@ -952,7 +952,7 @@
                             <ul class="purchase-table-ul">
                                 <li class="table_product number">상품번호</li>
                                 <li class="table_product name">상품명</li>
-                                <li class="table_product seller_id">판매자ID</li>
+                                <li class="table_product seller_id">구매자ID</li>
                                 <li class="table_product when_purchase">구매날짜</li>
                                 <li class="table_product price">결제금액</li>
                                 <li class="table_product working_status">취소상태</li>
