--- a/templates/seller/order_manage.html
+++ b/templates/seller/order_manage.html
@@ -87,7 +87,7 @@
                                         <li class="table_product name">{{ order_item.cart_item.item.oneline_intro }}</li>
                                         <li class="table_product buyer_id">{{ order_item.user.get_short_name }}</li>
                                         <li class="table_product when_purchase">{{ order_item.order.timestamp|date:"m.d" }}</li>
-                                        <li class="table_product working_status">{{ order_item.status }}</li>
+                                        <li class="table_product working_status">{{ order_item.status_in_korean }}</li>
                                         <li class="table_product price">{{ order_item.cart_item.line_item_total }}</li>
                                     </ul>
                                     <div class="table_product btn" >
@@ -205,7 +205,7 @@
                                                 <li>
                                                     <form method="POST" action="{% url 'product_order_manage' %}">{% csrf_token %}
                                                         <input type="hidden" name="is_status_change" value="true"/>
-                                                        <input type="hidden" name="new_status" value="finished"/>
+                                                        <input type="hidden" name="new_status" value="wait_confirm"/>
                                                         <input type="hidden" name="order_item" value="{{ order_item }}"/>
                                                         <input class="detail_bottom_btn" type="submit" value="작업완료"/>
                                                     </form>
@@ -967,7 +967,7 @@
                                         <li class="table_product buyer_id">{{ order_item.user.get_short_name }}</li>
                                         <li class="table_product when_purchase">{{ order_item.order.timestamp|date:"m.d" }}</li>
                                         <li class="table_product price">{{ order_item.cart_item.line_item_total }}</li>
-                                        <li class="table_product refund_status">{{ order_item.status }}</li>
+                                        <li class="table_product refund_status">{{ order_item.status_in_korean }}</li>
                                     </ul>
                                     <div class="table_product btn detail" >
                                         <button class="show_detail_btn first" aria-hidden="true">
@@ -1086,7 +1086,7 @@
                                     <li class="table_product buyer_id">{{ order_item.user.get_short_name }}</li>
                                     <li class="table_product when_purchase">{{ order_item.order.timestamp|date:"m.d" }}</li>
                                     <li class="table_product price">{{ order_item.cart_item.line_item_total }}</li>
-                                    <li class="table_product refund_status">{{ order_item.status }}</li>
+                                    <li class="table_product refund_status">{{ order_item.status_in_korean }}</li>
                                 </ul>
                                 <div class="table_product btn detail" >
                                     <button class="show_detail_btn first" aria-hidden="true">
