main page banner link to each tag (issue #111)

--- a/templates/home.html
+++ b/templates/home.html
@@ -82,66 +82,41 @@
 {% block jumbotron %}
     <div class="new_jumbotron">
         <div class="jumbotron_left">
-            <div class="owl-slide banner-1"
-                 style='background-image: url("{% static 'img/ver1.5/banner_01.png' %}");'></div>
-            <div class="owl-slide banner-2"
-                 style='background-image: url("{% static 'img/ver1.5/banner_02.png' %}");'></div>
-            <div class="owl-slide banner-3"
-                 style='background-image: url("{% static 'img/ver1.5/banner_03.png' %}");'></div>
-            <div class="owl-slide banner-4"
-                 style='background-image: url("{% static 'img/ver1.5/banner_04.png' %}");'></div>
-            <div class="owl-slide banner-5"
-                 style='background-image: url("{% static 'img/ver1.5/banner_05.png' %}");'></div>
+            <a href='/category/all?tag=pet'><div class="owl-slide banner-1" style='background-image: url("{% static 'img/ver1.5/banner_01.png' %}");'></div></a>
+            <a href='/category/all?tag=travel'><div class="owl-slide banner-2" style='background-image: url("{% static 'img/ver1.5/banner_02.png' %}");'></div></a>
+            <a href='/category/all?tag=food'><div class="owl-slide banner-3" style='background-image: url("{% static 'img/ver1.5/banner_03.png' %}");'></div></a>
+            <a href='/category/all?tag=fashion'><div class="owl-slide banner-4" style='background-image: url("{% static 'img/ver1.5/banner_04.png' %}");'></div></a>
+            <a href='/category/all?tag=it'><div class="owl-slide banner-5" style='background-image: url("{% static 'img/ver1.5/banner_05.png' %}");'></div></a>
         </div>
         <div class="jumbotron_right first">
-            <div class="jumbotron_right_content first"
-                style='background-image: url("{% static 'img/ver1.5/side_02.png' %}");'></div>
-            <div class="jumbotron_right_content second"
-                style='background-image: url("{% static 'img/ver1.5/side_03.png' %}");'></div>
-            <div class="jumbotron_right_content third"
-                style='background-image: url("{% static 'img/ver1.5/side_04.png' %}");'></div>
-            <div class="jumbotron_right_content fourth"
-                style='background-image: url("{% static 'img/ver1.5/side_05.png' %}");'></div>
+            <a href='/category/all?tag=travel'><div class="jumbotron_right_content first" style='background-image: url("{% static 'img/ver1.5/side_02.png' %}");'></div></a>
+            <a href='/category/all?tag=food'><div class="jumbotron_right_content second" style='background-image: url("{% static 'img/ver1.5/side_03.png' %}");'></div></a>
+            <a href='/category/all?tag=fashion'><div class="jumbotron_right_content third" style='background-image: url("{% static 'img/ver1.5/side_04.png' %}");'></div></a>
+            <a href='/category/all?tag=it'><div class="jumbotron_right_content fourth" style='background-image: url("{% static 'img/ver1.5/side_05.png' %}");'></div></a>
         </div>
         <div class="jumbotron_right second">
-            <div class="jumbotron_right_content first"
-                style='background-image: url("{% static 'img/ver1.5/side_01.png' %}");'></div>
-            <div class="jumbotron_right_content second"
-                style='background-image: url("{% static 'img/ver1.5/side_03.png' %}");'></div>
-            <div class="jumbotron_right_content third"
-                style='background-image: url("{% static 'img/ver1.5/side_04.png' %}");'></div>
-            <div class="jumbotron_right_content fourth"
-                style='background-image: url("{% static 'img/ver1.5/side_05.png' %}");'></div>
+            <a href='/category/all?tag=pet'><div class="jumbotron_right_content first" style='background-image: url("{% static 'img/ver1.5/side_01.png' %}");'></div></a>
+            <a href='/category/all?tag=food'><div class="jumbotron_right_content second" style='background-image: url("{% static 'img/ver1.5/side_03.png' %}");'></div></a>
+            <a href='/category/all?tag=fashion'><div class="jumbotron_right_content third" style='background-image: url("{% static 'img/ver1.5/side_04.png' %}");'></div></a>
+            <a href='/category/all?tag=it'><div class="jumbotron_right_content fourth" style='background-image: url("{% static 'img/ver1.5/side_05.png' %}");'></div></a>
         </div>
         <div class="jumbotron_right third">
-            <div class="jumbotron_right_content first"
-                style='background-image: url("{% static 'img/ver1.5/side_01.png' %}");'></div>
-            <div class="jumbotron_right_content second"
-                style='background-image: url("{% static 'img/ver1.5/side_02.png' %}");'></div>
-            <div class="jumbotron_right_content third"
-                style='background-image: url("{% static 'img/ver1.5/side_03.png' %}");'></div>
-            <div class="jumbotron_right_content fourth"
-                style='background-image: url("{% static 'img/ver1.5/side_05.png' %}");'></div>
+            <a href='/category/all?tag=pet'><div class="jumbotron_right_content first" style='background-image: url("{% static 'img/ver1.5/side_01.png' %}");'></div></a>
+            <a href='/category/all?tag=travel'><div class="jumbotron_right_content first" style='background-image: url("{% static 'img/ver1.5/side_02.png' %}");'></div></a>
+            <a href='/category/all?tag=fashion'><div class="jumbotron_right_content third" style='background-image: url("{% static 'img/ver1.5/side_04.png' %}");'></div></a>
+            <a href='/category/all?tag=it'><div class="jumbotron_right_content fourth" style='background-image: url("{% static 'img/ver1.5/side_05.png' %}");'></div></a>
         </div>
         <div class="jumbotron_right fourth">
-            <div class="jumbotron_right_content first"
-                style='background-image: url("{% static 'img/ver1.5/side_01.png' %}");'></div>
-            <div class="jumbotron_right_content second"
-                style='background-image: url("{% static 'img/ver1.5/side_02.png' %}");'></div>
-            <div class="jumbotron_right_content third"
-                style='background-image: url("{% static 'img/ver1.5/side_03.png' %}");'></div>
-            <div class="jumbotron_right_content fourth"
-                style='background-image: url("{% static 'img/ver1.5/side_05.png' %}");'></div>
+            <a href='/category/all?tag=pet'><div class="jumbotron_right_content first" style='background-image: url("{% static 'img/ver1.5/side_01.png' %}");'></div></a>
+            <a href='/category/all?tag=travel'><div class="jumbotron_right_content first" style='background-image: url("{% static 'img/ver1.5/side_02.png' %}");'></div></a>
+            <a href='/category/all?tag=food'><div class="jumbotron_right_content second" style='background-image: url("{% static 'img/ver1.5/side_03.png' %}");'></div></a>
+            <a href='/category/all?tag=it'><div class="jumbotron_right_content fourth" style='background-image: url("{% static 'img/ver1.5/side_05.png' %}");'></div></a>
         </div>
         <div class="jumbotron_right fifth">
-            <div class="jumbotron_right_content first"
-                style='background-image: url("{% static 'img/ver1.5/side_01.png' %}");'></div>
-            <div class="jumbotron_right_content second"
-                style='background-image: url("{% static 'img/ver1.5/side_02.png' %}");'></div>
-            <div class="jumbotron_right_content third"
-                style='background-image: url("{% static 'img/ver1.5/side_03.png' %}");'></div>
-            <div class="jumbotron_right_content fourth"
-                style='background-image: url("{% static 'img/ver1.5/side_04.png' %}");'></div>
+            <a href='/category/all?tag=pet'><div class="jumbotron_right_content first" style='background-image: url("{% static 'img/ver1.5/side_01.png' %}");'></div></a>
+            <a href='/category/all?tag=travel'><div class="jumbotron_right_content first" style='background-image: url("{% static 'img/ver1.5/side_02.png' %}");'></div></a>
+            <a href='/category/all?tag=food'><div class="jumbotron_right_content second" style='background-image: url("{% static 'img/ver1.5/side_03.png' %}");'></div></a>
+            <a href='/category/all?tag=fashion'><div class="jumbotron_right_content third" style='background-image: url("{% static 'img/ver1.5/side_04.png' %}");'></div></a>
         </div>
     </div>
 {% endblock %}
