--- a/templates/product/product_edit.html
+++ b/templates/product/product_edit.html
@@ -266,10 +266,13 @@
                     {{ form.message_to_admin }}
                 </div>
             </div>
-
+            <div id="dialog-confirm2" title="승인완료">
+                승인 요청이 완료됩니다.<br>
+                1~2일 이내에 게시물이 등록됩니다.
+            </div>
             <br>
             <div class="buttons">
-                <button class="final" type="submit">수정하기</button>
+                <button class="final_edit" type="button">수정하기</button>
             </div>
         </form>
     </div>
