--- a/templates/category.html
+++ b/templates/category.html
@@ -74,40 +74,40 @@
                 <div class="tag_wrapper">
                     <input type="checkbox" name="tag" id="all_checkbox" value="all"/>
                     <label for="all_checkbox">
-                        <img class="tag_image_before_click" src="/static/img/all.png">
-                        <img class="tag_image_clicked" src="/static/img/all_click.png">
+                        <img class="tag_image_before_click" src="/static/img/new_tags/all.png">
+                        <img class="tag_image_clicked" src="/static/img/new_tags/all_click.png">
                         <span>전체</span>
                     </label>
                 </div>
                 <div class="tag_wrapper">
                     <input type="checkbox" name="tag" id="it_checkbox" value="it"/>
                     <label for="it_checkbox">
-                        <img class="tag_image_before_click" src="/static/img/it.png">
-                        <img class="tag_image_clicked" src="/static/img/it_click.png">
+                        <img class="tag_image_before_click" src="/static/img/new_tags/it.png">
+                        <img class="tag_image_clicked" src="/static/img/new_tags/it_click.png">
                         <span>IT, 기기</span>
                     </label>
                 </div>
                 <div class="tag_wrapper">
                     <input type="checkbox" name="tag" id="food_checkbox" value="food"/>
                     <label for="food_checkbox">
-                        <img class="tag_image_before_click" src="/static/img/food.png">
-                        <img class="tag_image_clicked" src="/static/img/food_click.png">
+                        <img class="tag_image_before_click" src="/static/img/new_tags/food.png">
+                        <img class="tag_image_clicked" src="/static/img/new_tags/food_click.png">
                         <span>식품/맛집</span>
                     </label>
                 </div>
                 <div class="tag_wrapper">
                     <input type="checkbox" name="tag" id="fashion_checkbox" value="fashion"/>
                     <label for="fashion_checkbox">
-                        <img class="tag_image_before_click" src="/static/img/fashion.png">
-                        <img class="tag_image_clicked" src="/static/img/fashion_click.png">
+                        <img class="tag_image_before_click" src="/static/img/new_tags/fashion.png">
+                        <img class="tag_image_clicked" src="/static/img/new_tags/fashion_click.png">
                         <span>패션/뷰티</span>
                     </label>
                 </div>
                 <div class="tag_wrapper">
                     <input type="checkbox" name="tag" id="pet_checkbox" value="pet"/>
                     <label for="pet_checkbox">
-                        <img class="tag_image_before_click" src="/static/img/pet.png">
-                        <img class="tag_image_clicked" src="/static/img/pet_click.png">
+                        <img class="tag_image_before_click" src="/static/img/new_tags/pet.png">
+                        <img class="tag_image_clicked" src="/static/img/new_tags/pet_click.png">
                         <span>반려동물</span>
                     </label>
                 </div>
@@ -115,40 +115,40 @@
                 <div class="tag_wrapper">
                     <input type="checkbox" name="tag" id="car_checkbox" value="car"/>
                     <label for="car_checkbox">
-                        <img class="tag_image_before_click" src="/static/img/car.png">
-                        <img class="tag_image_clicked" src="/static/img/car_click.png">
+                        <img class="tag_image_before_click" src="/static/img/new_tags/car.png">
+                        <img class="tag_image_clicked" src="/static/img/new_tags/car_click.png">
                         <span>자동차</span>
                     </label>
                 </div>
                 <div class="tag_wrapper">
                     <input type="checkbox" name="tag" id="travel_checkbox" value="travel"/>
                     <label for="travel_checkbox">
-                        <img class="tag_image_before_click" src="/static/img/travel.png">
-                        <img class="tag_image_clicked" src="/static/img/travel_click.png">
+                        <img class="tag_image_before_click" src="/static/img/new_tags/travel.png">
+                        <img class="tag_image_clicked" src="/static/img/new_tags/travel_click.png">
                         <span>여행,취미</span>
                     </label>
                 </div>
                 <div class="tag_wrapper">
                     <input type="checkbox" name="tag" id="health_checkbox" value="health"/>
                     <label for="health_checkbox">
-                        <img class="tag_image_before_click" src="/static/img/health.png">
-                        <img class="tag_image_clicked" src="/static/img/health_click.png">
+                        <img class="tag_image_before_click" src="/static/img/new_tags/health.png">
+                        <img class="tag_image_clicked" src="/static/img/new_tags/health_click.png">
                         <span>건강,의료</span>
                     </label>
                 </div>
                 <div class="tag_wrapper">
                     <input type="checkbox" name="tag" id="interior_checkbox" value="interior"/>
                     <label for="interior_checkbox">
-                        <img class="tag_image_before_click" src="/static/img/interior.png">
-                        <img class="tag_image_clicked" src="/static/img/interior_click.png">
+                        <img class="tag_image_before_click" src="/static/img/new_tags/interior.png">
+                        <img class="tag_image_clicked" src="/static/img/new_tags/interior_click.png">
                         <span>인테리어</span>
                     </label>
                 </div>
                 <div class="tag_wrapper">
                     <input type="checkbox" name="tag" id="etc_checkbox" value="etc"/>
                     <label for="etc_checkbox">
-                        <img class="tag_image_before_click" src="/static/img/etc.png">
-                        <img class="tag_image_clicked" src="/static/img/etc_click.png">
+                        <img class="tag_image_before_click" src="/static/img/new_tags/etc.png">
+                        <img class="tag_image_clicked" src="/static/img/new_tags/etc_click.png">
                         <span>여행,취미</span>
                     </label>
                 </div>
