--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -402,8 +402,8 @@
                             유의사항
                         </div>
                         <div class="tab-content">
-                            {% if product.refund %}
-                                {{ product.refund|safe }}
+                            {% if product.message_to_buyer %}
+                                {{ product.message_to_buyer|safe }}
                             {% else %}
                                 2주 안에 주문 수량이 떨어졌을 경우 100% 복구해드립니다.<br/>
                                 환불규정 : 셋팅이 진행된 후에는 환불이 불가하며, 작업이 당초 약정일자보다 지연되거나<br/>
