--- a/templates/product/product_upload.html
+++ b/templates/product/product_upload.html
@@ -185,13 +185,13 @@
                      <label class="product-upload-title-label">팔로워수</label>
                 </div>
                 <div class="product-upload-sub follower_visit_num">
-                    {{ form.follower_visit_num }}
+                    {{ form.follower_visit_num }} 명
                 </div>
                 <div class="product-upload-sub follower_num">
-                    {{ form.follower_num }}
+                    {{ form.follower_num }} 명
                 </div>
                 <div class="product-upload-sub follower_friends_num">
-                    {{ form.follower_friends_num }}
+                    {{ form.follower_friends_num }} 명
                 </div>
             </div>
 
