image change work (issue #133, #134, #135, #136, #137, #119)

--- a/templates/account/email/password_reset_key_message.html
+++ b/templates/account/email/password_reset_key_message.html
@@ -13,7 +13,7 @@
             <table border="0" cellpadding="20" cellspacing="0" width="600">
                 <tr>
                     <td>
-                        <img src="https://s3.ap-northeast-2.amazonaws.com/snssocialup/static/img/email_image.png">
+                        <img src="/static/img/newsletter.png">
                     </td>
                 </tr>
             </table>
@@ -31,7 +31,7 @@
                 </tr>
                 <tr>
                     <td align="center" valign="middle"
-                        style="cursor:pointer;background:#648efc;color:#FFFFFF;font-size:14px;font-weight:bold; letter-spacing:-.5px; line-height:150%; padding-top:15px; padding-right:30px; padding-bottom:15px; padding-left:30px; border-radius:5px;">
+                        style="cursor:pointer;background:#648efc;color:#FFFFFF;font-size:14px;font-weight:bold; letter-spacing:-.5px; line-height:150%; padding-top:15px; padding-right:30px; padding-bottom:15px; padding-left:30px;">
                         <a href="{{ password_reset_url }}" target="_blank"
                            style="color:#FFFFFF; text-decoration:none;">비밀번호 재설정하기</a>
                     </td>
