--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{% static 'css/auth.css' %}">
     <style type="text/css">
         .bg_container {
-            background-image: url("{% static 'img/01.png' %}");
+            background-image: url("{% static 'img/bg_02.png' %}");
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
@@ -53,7 +53,6 @@
     {% endif %}
     <div class="bg_container">
         <div class="auth-logo">
-            <img src="{% static 'img/logo2.png' %}">
         </div>
         <div class="auth-area">
             <form class="login" id="login_form" method="post" action="{% url 'account_login' %}">{% csrf_token %}
