--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{% static 'css/auth.css' %}">
     <style type="text/css">
         .bg_container {
-            background-image: url("{% static 'img/bg.png' %}");
+            background-image: url("{% static 'img/bg_01.png' %}");
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
