--- a/templates/account/verification_sent.html
+++ b/templates/account/verification_sent.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="{% static 'css/auth.css' %}">
     <style type="text/css">
         .bg_container {
-            background-image: url("{% static 'img/02.png' %}");
+            background-image: url("{% static 'img/bg_03.png' %}");
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
@@ -30,7 +30,6 @@
 {% block content %}
 <div class="bg_container">
     <div class="auth-logo">
-        <img src="{% static 'img/logo2.png' %}">
     </div>
     <div class="auth-area">
         <div class="verification-email">
