--- a/templates/product/product_upload.html
+++ b/templates/product/product_upload.html
@@ -117,11 +117,20 @@
             });
 
             $('.final').on('click', function() {
-                if ($('#agreenment1').is(':checked')) {
-                    $("#dialog-confirm").dialog('open');
+                if(!$('#product-upload-form')[0].checkValidity()){
+                    if(!$('#id_sns_url')[0].checkValidity()){
+                        alert('SNS 주소 양식을 확인해주세요.');
+                    }
+                    else{
+                        alert('입력을 잘못했습니다.');
+                    }
                 }else{
-                    alert('이용약관에 동의해주세요.');
-                }
+                    if ($('#agreenment1').is(':checked')) {
+                        $("#dialog-confirm").dialog('open');
+                    }else{
+                        alert('이용약관에 동의해주세요.');
+                    }
+                };
             });
         {% endif %}
     </script>
