--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load producttags %}
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -33,7 +34,7 @@
         $(function () {
             $('#contact_button').on('click', function () {
                 // 관리자 계정(또는 1:1상담 받을 계정)으로 연결. 2번째, 3번째, 4번째 파라미터를 관리자 계정 정보로 넣고 주석 해제하기
-                // startMessage('{{ user.id }}', $(this).data('id'), $(this).data('name'), $(this).data('profile'));
+                startMessage('{{ user.id }}', '{{ user.id|cs_admin_user_id }}', '{{ user.id|cs_admin_user_short_name }}', '{{ user.id|cs_admin_user_avatar }}');
             });
         });
     </script>
